Changes of Hyppolit the IRC bot

v0.16 2012.TBA
	- fixed auto rejoin (BOWTIE)
	- tweaks to logging to ignore colours (BOWTIE)
	
v0.15 2012.07.17
	- tweak explain: messages submersible_toaster++ (BOWTIE)
	- various string tweaks (BOWTIE)
	
v0.14 2012.07.16
	- added basic help (BOWTIE)

v0.13 2012.07.16
	- switch to YAML::XS to use api 1.1 same as pp-yaml
	  use data-printer because it's pritty
	  use irc-utils as it's avabile for colour
	  add welcome message
	  request user_x and mib_x change there nickname
	  handel nick name change (BOWTIE)

v0.12 2012.03.11
    Teach Hyppolit to pass messages

v0.11 2011.08.09
	New command:
	  uptime?             to get the uptime of the system 
	  Hyppolit: trac!     to open the Trac registration form for 5 minutes

v0.10 2011.03.23
	Report changes to the wiki as well

v0.09 2011.03.23
	Add author information to trac messages
	Add messages about new attachments in trac

v0.08 2011.03.18
	Add 'op me' command for those who are already trusted
	Starting from v0.12 Trac keeps the changetime in 
	microsecond so we adjust

v0.07 2011.02.27
	Update Code::Explain API to 0.02

v0.06 2011.02.25
	Add support to Code::Explain

v0.05 2009.09.23
	Added tracdb config parameter for parsing of tracdb
	Added reacting on "#<ticketnumber>" on channel
	Added (primitive) reacting on "r<changeset>" on channel

v0.04 2009.03.08
	Fix karma regex
	count commits as karma as well
	allow     Nick, keyword is explanation
	allow     Nick, keyword is also another explanation
	Some SVN improvements

v0.03 2009.03.08
	Add logging support
	Add some SVN commit support

v0.02 2009.03.01
	Add karma support
	Add trust support

v0.01 2009.03.01
	First ever packaged version 